<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient"
    tools:context=".SignUpActivity">

        <include layout="@layout/app_bar"
            android:id="@+id/appBarID"/>

        <androidx.cardview.widget.CardView
            xmlns:Card_View="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"
            Card_View:cardCornerRadius="5dp"
            Card_View:cardElevation="10dp"
            Card_View:cardBackgroundColor="@color/blueDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/blue_gradient"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#252525"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/eTxt_nameRegID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/user_name"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#252525"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/eTxt_emailRegID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:textColorHint="#252525"

                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/eTxt_passwordRegID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_registerID"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/signin_grad"
                    android:text="@string/sign_up"
                    android:textColor="@color/txt_common"
                    android:textAllCaps="false"
                    android:textSize="16sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_alreadyRegID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="300dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/clickable_txt"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>

</RelativeLayout>