<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient"
    android:padding="20dp"
    tools:context=".SignInActivity">



        <androidx.cardview.widget.CardView
            xmlns:Card_View="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="5dp"
            android:layout_centerInParent="true"
            Card_View:cardCornerRadius="5dp"
            Card_View:cardElevation="10dp"
            Card_View:cardBackgroundColor="@color/blueDark"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:background="@drawable/blue_gradient"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#313030"
                    >

                    <EditText
                        android:id="@+id/eTxt_emailID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="#313030"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/eTxt_passwordID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_loginID"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/signin_grad"
                    android:text="@string/sign_in"
                    android:textColor="@color/txt_common"
                    android:textAllCaps="false"
                    android:textSize="16sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_signUpID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="230dp"
                android:gravity="center"
                android:text="Sign up Now"
                android:textColor="@color/clickable_txt"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>



</RelativeLayout>